# e_m

./: .env.example  .flake8  LICENSE  README.md  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: da855f189d03_first_migration.py
app/: main.py
app/api/: routers.py
app/api/endpoints/: __init__.py  object.py  user.py
app/core/: base.py  config.py  crud.py  db.py  init_db.py  models.py  user.py
app/schemas/: object.py  user.py
docs/: Naumov Aleksei (1).pdf:Zone.Identifier
tests/: conftest.py  test_db.py  test_main.py  test_user.py
tests/fixtures/: fixture_data.py
