[tool.poetry]
name = "e-m"
version = "0.1.0"
description = "Test task"
authors = ["Alex Naumov <algena75@yandex.ru>"]
readme = "README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.110.2"
uvicorn = {version = "0.29.0", extras = ["standard"]}
asyncpg = {version = "0.29.0", extras = ["postgres"]}
fastapi-users = {version = "13.0.0", extras = ["sqlalchemy"]}
alembic = "^1.17.2"
pydantic-settings = "2.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.1"
flake8 = "^7.3.0"
httpx = "0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
